# NAOWifiManager

./: CMakeLists.txt  README.md  config.cpp  config.h  distr.sh  eventhandler.h  filter.h  globals.h  log.cpp  log.h  main.cpp  menu.cpp  menu.h  menucontrol.cpp  menucontrol.h  qiproject.xml  scriptcommand.cpp  scriptcommand.h  wifi.cpp  wifi.h  wifi_conflict-20160421-150858.cpp  wifimanager.cpp  wifimanager.h  wifiscript.cpp  wifiscript.h  wifiservice.cpp  wifiservice.h  wifistate.cpp  wifistate.h
scripts/: ports.txt  wifi_connect_enterprise.sh  wifi_connect_open.sh  wifi_connect_wpa.sh  wifi_remove_network.sh
